Sun Aug 26 16:40:50 BST 2007  Colin Watson  <cjwatson@debian.org>

	Suppress warnings in --quiet mode (thanks, Martin Dorey; Debian bugs
	#348008, #378428, and #411220).

	* src/check_mandirs.c (test_manfile): Suppress "bad symlink" warning
	  under --quiet.
	* src/ult_src.c (ult_hardlink): Suppress "can't search directory"
	  warning under --quiet.
	  (ult_softlink): Suppress "dangling symlinks" and "can't resolve"
	  warnings under --quiet.
	  (ult_src): Suppress "can't resolve", "is self referencing", and
	  "can't open" warnings under --quiet.
	* src/lexgrog.l: Declare global quiet variable.

Sun Aug 26 16:10:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (main): Skip descriptions with NULL name or whatis.
	  This causes pages with no description to be flagged as parse
	  failures, so that automatic scanners can pick them up more easily.

Sun Aug 26 15:08:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (is_section): Disallow sectional extensions of
	  alphabetic sections, e.g. n and l from the default configuration
	  (Debian bug #391977). Also disallow sectional extensions beginning
	  with a digit (Debian bug #421481).

Mon Aug 20 00:10:49 BST 2007  Colin Watson  <cjwatson@debian.org>

	Discard stderr from formatting processes when outputting to a pager,
	to avoid visual corruption from any error messages (thanks, Vincent
	Lefevre; Debian bug #372939).

	* lib/pipeline.h (struct command): Add discard_err member.
	* lib/pipeline.c (command_new, command_dup): Initialise discard_err.
	  (pipeline_start): Redirect the child's stderr to /dev/null if
	  discard_err is set.
	* src/man.c (discard_stderr): New function to set discard_err on all
	  commands in a pipeline.
	  (format_display_and_save, format_display): Use it on format_cmd.
	* docs/NEWS: Document this.

Sun Aug 19 21:04:24 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/descriptions.c (parse_descriptions): Skip name tokens